--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.threaded_porject_workshop_7" >
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ThreadedPorjectWorkshop7" >
+        android:theme="@style/Theme.ThreadedPorjectWorkshop7"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".Customers.CustomerDetailsActivity"
             android:exported="false" />
